--- a/views/index.jade
+++ b/views/index.jade
@@ -17,6 +17,8 @@ form#mainform
 
     button( type="submit" ) Make it so, costs you a tweet!
 
+code source code available <a href='https://github.com/sydlawrence/soundcloud-twilio'>on github</a>
+
 script
   var _gaq = _gaq || [];
   _gaq.push(['_setAccount', 'UA-19804545-20']);
