--- a/views/index.jade
+++ b/views/index.jade
@@ -15,7 +15,7 @@ form#mainform
     input( name="to" )
   p
 
-    button( type="submit" ) Make it so, costs you a tweet!
+    button( type="submit" ) Make it so!
 
 code source code available <a href='https://github.com/sydlawrence/soundcloud-twilio'>on github</a>
 
